--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -17,6 +17,8 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
 
 WORKDIR /var/www/html
 
+EXPOSE 5173
+
 EXPOSE 8000
 
-CMD php -S 0.0.0.0:8000 public/index.php
+CMD php artisan serve --host=0.0.0.0 --port=8000
